@@ -1,4 +1,4 @@
-rev 13-Aug_25-12_31
+rev 13-Aug_27-12_08
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -253,3 +253,6 @@ Supplied missing fckeditor language strings and JS FCKLang references.
 
 25 Aug
 cleaned up fckeditor unused plugins and replaced nested list plugins with FCKeditor's indent and outdent.
+
+27 Aug
+Interwiki links: preserve lost forward slashes and query strings
